@@ -11,6 +11,7 @@ Christian Dax
 Christopher Ziegler
 Clément Tamines
 David Müller
+Dávid Smolka
 Edmond Irani Liu
 Ernesto Posse
 Étienne Renault
